--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</div>
 				</li>-->
 				<li class="d-flex no-block card-body  border-top"> <i class="fa fa-check-circle w-30px m-t-5"></i>
-				<div> <span class="text-muted">01. Babel Setup</span>  <a href="back-to-top-button/index.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a></div>
+				<div> <span class="text-muted">01. Babel Setup</span> <a href="es6-laracasts/demo1.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a> </div>
 					<div class="ml-auto">
 						<div class="tetx-right">
 							<h5 class="text-muted m-b-0">18</h5> <span class="text-muted font-16">Mar</span>
@@ -56,7 +56,7 @@
 				</div>
 				</li>
 				<li class="d-flex no-block card-body  border-top"> <i class="fa fa-check-circle w-30px m-t-5"></i>
-				<div> <span class="text-muted">02. ES6 Compilation With Laravel Elixir </span>  <a href="back-to-top-button/index.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a></div>
+				<div> <span class="text-muted">02. ES6 Compilation With Laravel Elixir </span>  </div>
 					<div class="ml-auto">
 						<div class="tetx-right">
 							<h5 class="text-muted m-b-0">18</h5> <span class="text-muted font-16">Mar</span>
@@ -64,7 +64,7 @@
 				</div>
 				</li>
 				<li class="d-flex no-block card-body  border-top"> <i class="fa fa-check-circle w-30px m-t-5"></i>
-				<div> <span class="text-muted">03. To Var, Let, or Const </span>  <a href="back-to-top-button/index.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a></div>
+				<div> <span class="text-muted">03. To Var, Let, or Const </span>  <a href="es6-laracasts/demo2.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a></div>
 					<div class="ml-auto">
 						<div class="tetx-right">
 							<h5 class="text-muted m-b-0">18</h5> <span class="text-muted font-16">Mar</span>
@@ -72,7 +72,7 @@
 				</div>
 				</li>
 				<li class="d-flex no-block card-body  border-top"> <i class="fa fa-check-circle w-30px m-t-5"></i>
-				<div> <span class="text-muted">04. Arrows </span>  <a href="back-to-top-button/index.html" class="m-b-0 font-medium p-0" data-abc="true"> view demo</a></div>
+				<div> <span class="text-muted">04. Arrows </span>  <a href="back-to-top-button/index.html" class="m-b-0 font-medium p-0" data-abc="true"> not complete</a></div>
 					<div class="ml-auto">
 						<div class="tetx-right">
 							<h5 class="text-muted m-b-0">18</h5> <span class="text-muted font-16">Mar</span>
