--- a/es6-laracasts/demo2.html
+++ b/es6-laracasts/demo2.html
@@ -21,6 +21,32 @@
         <p id="letex"></p>
         
     </div>
+	
+	    <div class="card-body">
+        <h3>Cont Example </h3>
+        <p id="conttex"></p>
+        
+    </div>
+	
+	
+	<h2>Declaring a Variable Using const</h2>
+
+ 
+
+<p id="demo"></p>
+
+ 
+
+<script>
+var  x = 10;
+// Here x is 10
+{  
+  const x = 2;
+  // Here x is 2
+}
+// Here x is 10
+document.getElementById("demo").innerHTML = x;
+</script>
 
     <script>
 
@@ -33,6 +59,18 @@
 
      let letVariable ="This is result true for Let Variable";
     document.getElementById("letex").innerHTML = letVariable ; 
+</script>
+
+<script>
+
+   var  x = 12;
+// Here x is 12
+{  
+  const x = 4;
+  // Here x is 4
+}
+// Here x is 12
+    document.getElementById("conttex").innerHTML = letVariable ; 
 </script>
 
 </body>
